--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,276 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/** Copied for use **/
+@font-face {
+font-family: 'Metropolis Regular';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Regular'), url('../fonts/Metropolis/Metropolis-Regular.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Regular Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Regular Italic'), url('../fonts/Metropolis/Metropolis-RegularItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Extra Light';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Extra Light'), url('../fonts/Metropolis/Metropolis-ExtraLight.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Light';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Light'), url('../fonts/Metropolis/Metropolis-Light.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Thin';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Thin'), url('../fonts/Metropolis/Metropolis-Thin.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Extra Light Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Extra Light Italic'), url('../fonts/Metropolis/Metropolis-ExtraLightItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Light Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Light Italic'), url('../fonts/Metropolis/Metropolis-LightItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Thin Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Thin Italic'), url('../fonts/Metropolis/Metropolis-ThinItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Medium';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Medium'), url('../fonts/Metropolis/Metropolis-Medium.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Semi Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Semi Bold'), url('../fonts/Metropolis/Metropolis-SemiBold.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Bold'), url('../fonts/Metropolis/Metropolis-Bold.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Bold Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Bold Italic'), url('../fonts/Metropolis/Metropolis-BoldItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Medium Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Medium Italic'), url('../fonts/Metropolis/Metropolis-MediumItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Semi Bold Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Semi Bold Italic'), url('../fonts/Metropolis/Metropolis-SemiBoldItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Extra Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Extra Bold'), url('../fonts/Metropolis/Metropolis-ExtraBold.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Extra Bold Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Extra Bold Italic'), url('../fonts/Metropolis/Metropolis-ExtraBoldItalic.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Black';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Black'), url('../fonts/Metropolis/Metropolis-Black.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Metropolis Black Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Metropolis Black Italic'), url('../fonts/Metropolis/Metropolis-BlackItalic.woff') format('woff');
+}
+
+/* GLOBAL STYLES - Using Carousel
+-------------------------------------------------- */
+/* Padding below the footer and lighter body text */
+
+body {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #687281;
+  font-family: "Metropolis Regular";
+}
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+  background-color: #777;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
+/** Custom **/
+.navbar {
+  background: #1f2d41;
+  font-family: "Metropolis Bold";
+}
+
+.navbar-brand {
+  color: #1fd660;
+}
+
+.nav-link {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: "Metropolis Regular";
+}
+
+/** Darken on hover **/
+.nav-link:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.round-btn {
+  font-family: "Metropolis Bold";
+  background-color: #1fd660;
+  border-color: #1fd660;
+  color: #1f2d41;
+  border-radius: 50rem;
+  font-size: 15px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.round-btn:hover {
+  background-color: #009476;
+  border-color: #009476;
+}
