--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
     <main role="main">
       <%= yield %>
-      <%= render "shared/header" %>
+      <%= render "shared/footer" %>
     </main>
   </body>
 </html>
