--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,26 +1,34 @@
 <header>
   <nav class="navbar navbar-expand-md fixed-top">
-    <a class="navbar-brand" href="#">4Students</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <!-- <a class="navbar-brand" href="#">4Students</a> -->
+    <li class = "navbar-brand"><%= link_to '4Students', root_path, class: 'navber-brand' %></li>
+
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"> -->
+      <!-- <span class="navbar-toggler-icon"></span> -->
+    <!-- </button> -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <%= link_to 'Home',root_path %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <%= link_to 'Food', root_path %>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <%= link_to 'Entertainment', root_path %>
+        </li>
+        <li class = "nav-item">
+            <%= link_to 'Support', root_path %>
+        </li>
+        <li class = "nav-item">
+            <%= link_to 'Contact', root_path %>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <!--
         Incase I need it for future use.
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
-        <button class="btn btn-outline-success my-2 my-sm-0 round-btn" type="submit">Login</button>
+        <%= button_to "Login", new_user_session_path, data: {turbolinks: false}, class:'btn btn-outline-success my-2 my-sm-0 round-btn', style: "float:right;" %>
       </form>
     </div>
   </nav>
