--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Footer Page Elements-->
-    <ul class = "list-inline">
+    <ul class = "list-inline page-elements">
       <li>
         <a>Privacy</a>
       </li>
