--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,13 +4,13 @@
     <!-- Footer Social Media Icons-->
     <div class = "list-inline social">
       <li>
-        <%= link_to image_tag("facebookFiltered.png", size: '26x26', class:'social-image'), root_path %>
+        <%= link_to image_tag("facebookFiltered.png", size: '26x26', class:'social-image'), 'https://www.facebook.com/' %>
       </li>
       <li >
-        <%= link_to image_tag("twitterFiltered.png", size: '26x26', class:'social-image'), root_path %>
+        <%= link_to image_tag("twitterFiltered.png", size: '26x26', class:'social-image'), 'https://twitter.com/' %>
       </li>
       <li >
-        <%= link_to image_tag("instagramFiltered.png", size: '26x26', class:'social-image'), root_path %>
+        <%= link_to image_tag("instagramFiltered.png", size: '26x26', class:'social-image'), 'https://www.instagram.com/' %>
       </li>
     </div>
 
