--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,7 +10,7 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <%= image_tag("gradient.png" ,style: 'width:100%')%>
+        <%= image_tag("foodWallpaper.jpg" ,style: 'width:100%; filter: blur(4px);')%>
         <div class="carousel-caption">
           <h3>Food Helper</h3>
           <p>Know your grocery!</p>
