--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,148 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/** Copied for use **/
 @font-face {
-font-family: 'Metropolis Regular';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Regular'), url('../fonts/Metropolis/Metropolis-Regular.woff') format('woff');
+  font-family: 'Metropolis Regular';
+  src:url('Metropolis-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
-
 @font-face {
-font-family: 'Metropolis Regular Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Regular Italic'), url('../fonts/Metropolis/Metropolis-RegularItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Extra Light';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Extra Light'), url('../fonts/Metropolis/Metropolis-ExtraLight.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Light';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Light'), url('../fonts/Metropolis/Metropolis-Light.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Thin';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Thin'), url('../fonts/Metropolis/Metropolis-Thin.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Extra Light Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Extra Light Italic'), url('../fonts/Metropolis/Metropolis-ExtraLightItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Light Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Light Italic'), url('../fonts/Metropolis/Metropolis-LightItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Thin Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Thin Italic'), url('../fonts/Metropolis/Metropolis-ThinItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Medium';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Medium'), url('../fonts/Metropolis/Metropolis-Medium.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Semi Bold';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Semi Bold'), url('../fonts/Metropolis/Metropolis-SemiBold.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Bold';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Bold'), url('../fonts/Metropolis/Metropolis-Bold.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Bold Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Bold Italic'), url('../fonts/Metropolis/Metropolis-BoldItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Medium Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Medium Italic'), url('../fonts/Metropolis/Metropolis-MediumItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Semi Bold Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Semi Bold Italic'), url('../fonts/Metropolis/Metropolis-SemiBoldItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Extra Bold';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Extra Bold'), url('../fonts/Metropolis/Metropolis-ExtraBold.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Extra Bold Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Extra Bold Italic'), url('../fonts/Metropolis/Metropolis-ExtraBoldItalic.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Black';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Black'), url('../fonts/Metropolis/Metropolis-Black.woff') format('woff');
-}
-
-
-@font-face {
-font-family: 'Metropolis Black Italic';
-font-style: normal;
-font-weight: normal;
-src: local('Metropolis Black Italic'), url('../fonts/Metropolis/Metropolis-BlackItalic.woff') format('woff');
+  font-family: 'Metropolis Bold';
+  src:url('Metropolis-Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* GLOBAL STYLES - Using Carousel
@@ -268,18 +138,14 @@ body {
   list-style-type: none;
 }
 
-.nav-link {
-  // color: rgba(255, 255, 255, 0.5);
-  font-family: "Metropolis Regular";
-}
-
 .nav-item{
   a {
     display: block;
     text-align: center;
     padding: 20px 30px;
     text-decoration: none;
-    color: #1fd660;
+    font-family: "Metropolis Regular";
+    color: rgba(255, 255, 255, 0.5);
 
     &:hover{
       color: rgba(255, 255, 255, 0.7);
