Fixing fonts, Rails uses font-url for SCSS.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: 'Metropolis Regular';
-  src:url('Metropolis-Regular.woff') format('woff');
+  src:font-url('Metropolis-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Metropolis Bold';
-  src:url('Metropolis-Bold.woff') format('woff');
+  src:font-url('Metropolis-Bold.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
