--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,9 +21,11 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  color: #687281;
+  // padding-top: 3rem;
+  // padding-bottom: 3rem;
+
+  // color: #687281;
+  text-decoration: none;
   font-family: "Metropolis Regular";
 }
 
@@ -34,6 +36,7 @@ body {
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
+  border-bottom: 1px solid #1fd660;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -46,13 +49,12 @@ body {
   height: 32rem;
   background-color: #777;
 }
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
+.carousel-inner > .item {
+  // position: absolute;
+  width: 100%;
+  height: 600px;
 }
+
 
 
 /* MARKETING CONTENT
@@ -108,27 +110,51 @@ body {
     margin-top: 7rem;
   }
 }
-
+// .carousel-inner > .item{
+//   width:100%;
+//   height:400px;
+// }
 /** Custom **/
 .navbar {
   background: #1f2d41;
   font-family: "Metropolis Bold";
+  margin-bottom: 0 !important;
 }
 
 .navbar-brand {
-  color: #1fd660;
+  list-style-type: none;
+
+  a{
+    color: #1fd660;
+
+    &:hover{
+      color: rgba(255, 255, 255, 0.7);
+      text-decoration: none;
+    }
+  }
 }
 
-.nav-link {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: "Metropolis Regular";
+.navbar-nav {
+  list-style-type: none;
 }
 
-/** Darken on hover **/
-.nav-link:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
+.nav-item{
+  a {
+    display: block;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+    font-family: "Metropolis Regular";
+    color: rgba(255, 255, 255, 0.5);
 
+    &:hover{
+      color: rgba(255, 255, 255, 0.7);
+      text-decoration: none;
+
+    }
+  }
+
+}
 .round-btn {
   font-family: "Metropolis Bold";
   background-color: #1fd660;
@@ -136,8 +162,8 @@ body {
   color: #1f2d41;
   border-radius: 50rem;
   font-size: 15px;
-  padding-right: 15px;
-  padding-left: 15px;
+  // padding-right: 15px;
+  // padding-left: 15px;
 }
 
 .round-btn:hover {
