--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,7 +10,8 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <%= image_tag("foodWallpaper.jpg" ,style: 'width:100%; filter: blur(4px);')%>
+        <div class="item-carousel-image" style = "background-image: url('/assets/foodWallpaper.jpg');"></div>
+
         <div class="carousel-caption">
           <h3>Food Helper</h3>
           <p>Know your grocery!</p>
@@ -18,7 +19,7 @@
       </div>
 
       <div class="item">
-        <%= image_tag("gradient2.jpg" ,style: 'width:100%')%>
+        <div class="item-carousel-image" style = "background-image: url('/assets/gradient2.jpg');"></div>
         <div class="carousel-caption">
           <h3>Entertainment</h3>
           <p>Entertain your self!</p>
@@ -26,7 +27,7 @@
       </div>
 
       <div class="item">
-        <%= image_tag("gradient3.jpg" ,style: 'width:100%')%>
+        <div class="item-carousel-image" style = "background-image: url('/assets/gradient3.jpg');"></div>
         <div class="carousel-caption">
           <h3>Support</h3>
           <p>Don't keep it inside!</p>
