--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -150,10 +150,16 @@ body {
     &:hover{
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
-
     }
   }
 
+}
+
+.item-carousel-image{
+  height: 100%;
+  filter: blur(2px);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .round-btn {
   font-family: "Metropolis Bold";
