Changes to the style.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -49,7 +49,7 @@
 </div>
 
 
-<!-- Sign Up Form-->
+<!-- Sign Up Form -->
 <!-- <h1 style = "text-align: center;">This is the home page Group 26</h1>
 <p style = 'overflow: auto;'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed sapien eget lacus facilisis vulputate et vitae dui. Nunc porta condimentum mollis. Aliquam erat volutpat. Fusce elementum blandit vulputate. Cras euismod porttitor urna quis sollicitudin. Integer nec odio eget neque pretium finibus vel nec lorem. Vestibulum commodo est non erat lacinia vestibulum. Ut tristique urna fringilla, auctor nulla feugiat, auctor lectus.
 
@@ -79,6 +79,4 @@ Cras sagittis, sapien in congue eleifend, nisi metus consequat purus, in ornare 
   <button type="submit" class="btn btn-primary">Submit</button>
 </form> -->
 
-<div class = 'container container-form mr-35 ml-35' >
-  <%= render "devise/registrations/new"%>
-</div>
+<!-- Removed the registeration for now, will put it back - aa03188 -->
