Fix the Carousel background and navbar class.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -36,6 +36,7 @@ body {
 /* Carousel base class */
 .carousel {
   margin-bottom: 4rem;
+  background-color: #1f2d41;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
