--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar fixed-top mb-0" >
+  <nav class="navbar navbar-expand-md fixed-top" >
     <!-- <a class="navbar-brand" href="#">4Students</a> -->
     <li class = "navbar-brand"><%= link_to '4Students', root_path, style: 'font-size: 30px;', data: {turbolinks: false} %></li>
 
