Final fixes for the simple template for the homepage.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,8 +27,8 @@
       <form class="form-inline mt-2 mt-md-0">
         <!--
         Incase I need it for future use.
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
-        <%= button_to "Login", new_user_session_path, data: {turbolinks: false}, class:'btn btn-outline-success my-2 my-sm-0 round-btn', style: "float:right;" %>
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        Removed login button to fix up-->
       </form>
     </div>
   </nav>
