--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -37,6 +37,7 @@ body {
 .carousel {
   margin-bottom: 4rem;
   background-color: #1f2d41;
+  border-bottom: 2px solid #1fd660;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -116,6 +117,7 @@ body {
   background: #1f2d41;
   font-family: "Metropolis Bold";
   margin-bottom: 0 !important;
+  border-radius: 0px;
 }
 
 .navbar-brand {
