Fixed the rendered picture

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
         <!--
         Incase I need it for future use.
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
-        <%= button_to "Login", new_user_session_path, data: {turbolinks: false}, class:'btn btn-outline-success my-2 my-sm-0 round-btn', style: "float:right;" %>
+        <%= button_to "Login", new_user_session_path, data: {turbolinks: false}, class:'btn btn-outline-success m-5 my-sm-0 round-btn', style: "float:right; margin: 5px !important;" %>
       </form>
     </div>
   </nav>
