--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,8 +10,8 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <div class="item-carousel-image" style = "background-image: url('/assets/foodWallpaper.jpg');"></div>
-
+        <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div> -->
+      
         <div class="carousel-caption">
           <h3>Food Helper</h3>
           <p>Know your grocery!</p>
