Fixed minor details

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,7 +24,7 @@ body {
   // padding-top: 3rem;
   // padding-bottom: 3rem;
 
-  // color: #687281;
+  background-color: #172539 !important ;
   text-decoration: none;
   font-family: "Metropolis Regular";
 }
