--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,7 +10,7 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div> -->
+        <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div>
       
         <div class="carousel-caption">
           <h3>Food Helper</h3>
@@ -50,33 +50,6 @@
 
 
 <!-- Sign Up Form -->
-<!-- <h1 style = "text-align: center;">This is the home page Group 26</h1>
-<p style = 'overflow: auto;'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed sapien eget lacus facilisis vulputate et vitae dui. Nunc porta condimentum mollis. Aliquam erat volutpat. Fusce elementum blandit vulputate. Cras euismod porttitor urna quis sollicitudin. Integer nec odio eget neque pretium finibus vel nec lorem. Vestibulum commodo est non erat lacinia vestibulum. Ut tristique urna fringilla, auctor nulla feugiat, auctor lectus.
-
-Vivamus eget odio a eros faucibus sollicitudin at sit amet mauris. Nulla facilisi. Sed mauris nisi, convallis eget erat quis, blandit condimentum leo. Nulla fringilla viverra viverra. Aliquam a magna a leo convallis mollis. Etiam feugiat, felis vitae suscipit ultrices, lorem nibh egestas eros, et volutpat dui est id sem. Aenean arcu odio, suscipit at finibus suscipit, ultricies sit amet ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris vel massa elementum, porta est dignissim, bibendum tellus.
-
-Nunc tempor vulputate dui in tempus. Sed maximus luctus massa. Phasellus faucibus tempor vulputate. Cras sollicitudin massa nec semper viverra. Pellentesque facilisis rhoncus est, eget laoreet tellus maximus ut. Duis non dapibus tortor. Vivamus vel mattis ex. Ut at odio pretium, dictum justo sed, suscipit nunc. Integer fermentum velit ut venenatis ornare.
-
-Etiam hendrerit magna id viverra bibendum. Aenean congue accumsan ipsum et viverra. Ut in odio magna. Duis imperdiet lectus sed arcu eleifend egestas. Proin dapibus, augue id euismod rhoncus, nibh diam aliquam ex, nec blandit sem sem nec lectus. Etiam tortor odio, posuere vel ex eu, dapibus consequat nibh. Donec eu tellus quis mi efficitur sodales quis quis justo. Suspendisse sed blandit nunc. Etiam hendrerit metus neque, sed iaculis quam suscipit vel. Ut pretium ligula ac tincidunt tempor. Maecenas mollis, risus eu dictum convallis, sem est fermentum orci, in mattis nulla urna imperdiet arcu. Quisque vitae mi ut erat semper pellentesque. Nunc tortor neque, volutpat quis scelerisque vel, porta non ligula.
-
-Cras sagittis, sapien in congue eleifend, nisi metus consequat purus, in ornare velit diam vel massa. Suspendisse iaculis pellentesque lacus a facilisis. Vestibulum auctor sagittis turpis vel egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. In vitae laoreet justo. Vestibulum vel laoreet diam. Duis blandit pellentesque libero id pellentesque. Nulla tellus mauris, malesuada ac facilisis vehicula, scelerisque ut nisl. Sed non placerat purus. Phasellus nec aliquet nulla. Curabitur vel bibendum quam, ac luctus quam. Curabitur at lacus at lectus aliquet viverra eu eget leo.</p> -->
-
-<!-- Sign Up Form-->
-<!-- <form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form> -->
-
-<!-- Removed the registeration for now, will put it back - aa03188 -->
+<div class = 'container container-form mr-35 ml-35' >
+  <%= render "devise/registrations/new"%>
+</div>
