--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,14 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+#error_explanation {
+  background-color: #1fd660;
+  box-shadow: 5px 10px #03375c;
+  color: black
+}
+
+.error {
+  color: red;
+}
