--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,7 +1,7 @@
 .container-form{
   border: 3px solid #1fd660;
-  margin-bottom: 20%;
-  margin-top: 20%;
+  margin-bottom: 10%;
+  margin-top: auto;
   border-radius: 5px;
   background-color: #1f2d41;
   // text-align: center;
@@ -17,6 +17,18 @@
 
   }
   .form-label{
+    font-family: "Metropolis Regular";
+    color: #1fd660;
+  }
+
+  .devise-links{
+    font-family: "Metropolis Regular";
+    color: #1fd660;
+    
+
+  }
+
+  .form-field{
     font-family: "Metropolis Regular";
     color: #1fd660;
   }
