--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -1,11 +1,34 @@
+
 <h2 class = "form-header">Sign up</h2>
+<script>
+
+  $(document).ready(function() {
+
+    //form has id new_user, this is the name given by devise
+     $('#new_user').validate({
+      rules : {
+        'user[email]': {required: true, email: true},
+        'user[password]': {required: true,minlength: 6},
+        'user[password_confirmation]': {required: true, equalTo: 'user[password]'}
+      },
+      messages: {
+        'user[email]': {required: 'This field is required'},
+        'user[password]': {required: 'Password is required'},
+        'user[password_confirmation]': {required: 'Password needs to be confirmed', equalTo: 'Passwords do not match'}
+      }
+
+    });
+  } );
+
+  </script>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="form-group">
     <%= f.label :email, class:'form-label' %><br />
-    <%= f.email_field :email, autocomplete: "email", placeholder:'example@hotmail.com' ,class: 'form-control' %>
+    <!-- validator works with name instead of id -->
+    <%= f.email_field :email, autocomplete: "email" ,class: 'form-control' %>
   </div>
 
   <div class="form-group">
@@ -21,13 +44,14 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
   </div>
 
-  <div>
+  <div class="actions">
 
-    <% f.submit "Sign up", class: 'round-btn', style: 'margin-bottom: 20px;' %>
+    <%= f.submit "Sign up",  class: 'round-btn', style: 'margin-bottom: 20px;' %>
 
   </div>
 <% end %>
+
 <!-- Temporary Button-->
-<button class="round-btn" style = 'margin-bottom: 20px;' >Sign Up </button>
+<!--<button class="round-btn" style = 'margin-bottom: 20px;' >Sign Up </button> -->
 
 <% render "devise/shared/links" %>
