--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,3 +1,5 @@
+
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -11,7 +13,7 @@
 
       <div class="item active">
         <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div>
-      
+
         <div class="carousel-caption">
           <h3>Food Helper</h3>
           <p>Know your grocery!</p>
@@ -50,6 +52,6 @@
 
 
 <!-- Sign Up Form -->
-<div class = 'container container-form mr-35 ml-35' >
+<div class = 'container container-form mr-35 ml-35' id='sign-up-form' >
   <%= render "devise/registrations/new"%>
 </div>
