--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -1,23 +1,45 @@
 
 <h2 class = "form-header">Sign up</h2>
 <script>
+  const url = 'http://universities.hipolabs.com/search?country=united kingdom'
+  $.ajax({
+    url: url,
+    success: function(result){
+      $.validator.addMethod('domains',function(value){
+        var domains = []
+        for (var i in result){
+          domains.push(result[i].domains)
+        }
 
-  $(document).ready(function() {
+        for (var i in domains){
+          if (domains[i].includes(value.slice(value.indexOf('@')+1))){
+            return true
+          }
+
+        }
+        return false
+      })
+
+    }
+  })
+   $(document).ready(function() {
 
     //form has id new_user, this is the name given by devise
      $('#new_user').validate({
       rules : {
-        'user[email]': {required: true, email: true},
+        'user[email]': {required: true, email: true, domains: true},
         'user[password]': {required: true,minlength: 6},
-        'user[password_confirmation]': {required: true, equalTo: 'user[password]'}
+        'user[password_confirmation]': {required: true, equalTo: '#sign_up_password'}
       },
       messages: {
-        'user[email]': {required: 'This field is required'},
+        'user[email]': {required: 'This field is required', domains: 'no uwus' },
         'user[password]': {required: 'Password is required'},
         'user[password_confirmation]': {required: 'Password needs to be confirmed', equalTo: 'Passwords do not match'}
       }
 
     });
+
+
   } );
 
   </script>
@@ -36,12 +58,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+    <%= f.password_field :password, id: 'sign_up_password', autocomplete: "new-password", class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation, class:'form-label' %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+    <%= f.password_field :password_confirmation, id: 'sign_up_password_confirmation', autocomplete: "new-password", class: 'form-control' %>
   </div>
 
   <div class="actions">
