Login and Sign Out functional. Validated valid email domain using jquery

--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -32,7 +32,7 @@
         'user[password_confirmation]': {required: true, equalTo: '#sign_up_password'}
       },
       messages: {
-        'user[email]': {required: 'This field is required', domains: 'no uwus' },
+        'user[email]': {required: 'This field is required', domains: 'Needs to be valid UK university domain' },
         'user[password]': {required: 'Password is required'},
         'user[password_confirmation]': {required: 'Password needs to be confirmed', equalTo: 'Passwords do not match'}
       }
