Fixed the Home page

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -29,6 +29,7 @@
 .page-elements{
   padding-top: 1%;
 }
+
 .list-inline{
   padding-left: 0;
   list-style: none;
@@ -52,7 +53,7 @@
 
 footer {
   font-family: 'Metropolis Regular';
-  border-top: 2px solid #1fd660;
+  // border-top: 2px solid #1fd660;
   bottom: 0;
   width: 100%;
   display: block;
