--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,7 +1,7 @@
 .container-form{
   border: 3px solid #1fd660;
   margin-bottom: 10%;
-  margin-top: auto;
+  margin-top: 10%;
   border-radius: 5px;
   background-color: #1f2d41;
   // text-align: center;
@@ -14,7 +14,6 @@
     // color: #1fd660;
     // width: 50%;
     // margin: auto;
-
   }
   .form-label{
     font-family: "Metropolis Regular";
@@ -24,8 +23,6 @@
   .devise-links{
     font-family: "Metropolis Regular";
     color: #1fd660;
-    
-
   }
 
   .form-field{
