--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
   <head>
     <title>FourStudents</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <%= favicon_link_tag asset_path('logo4.png') %>
+
     <!-- Add jquery validator -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
@@ -18,7 +20,7 @@
   <body>
 
     <%= render "shared/header" %>
-     <%= render 'shared/alerts' %>
+    <% render 'shared/alerts' %>
 
     <main role="main">
       <%= yield %>
