--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,21 +1,18 @@
-
-
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
-
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
 
       <div class="item active">
-        <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div>
-
+        <div class="item-carousel-image" style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');"></div> %>
         <div class="carousel-caption">
-          <h3>Food Helper</h3>
+          <h3>Food Helper <%= fa_icon "shopping-cart"%></h3>
           <p>Know your grocery!</p>
         </div>
       </div>
@@ -23,7 +20,7 @@
       <div class="item">
         <div class="item-carousel-image" style = "background-image: url('/assets/gradient2.jpg');"></div>
         <div class="carousel-caption">
-          <h3>Entertainment</h3>
+          <h3>Entertainment <%= fa_icon "child"%></h3>
           <p>Entertain your self!</p>
         </div>
       </div>
@@ -31,8 +28,15 @@
       <div class="item">
         <div class="item-carousel-image" style = "background-image: url('/assets/gradient3.jpg');"></div>
         <div class="carousel-caption">
-          <h3>Support</h3>
+          <h3>Support <%= fa_icon "home"%></h3>
           <p>Don't keep it inside!</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item-carousel-image" style = "background-image: url('/assets/gradient3.jpg');"></div>
+        <div class="carousel-caption">
+          <h3>Lobby Chat <%= fa_icon "comment"%></h3>
+          <p>Have fun with some random students</p>
         </div>
       </div>
 
@@ -55,3 +59,4 @@
 <div class = 'container container-form mr-35 ml-35' id='sign-up-form' >
   <%= render "devise/registrations/new"%>
 </div>
+
