More improvements Home Page

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,10 +1,11 @@
 .container-form{
   border: 3px solid #1fd660;
-  margin-bottom: 10%;
-  margin-top: 10%;
+  margin-bottom: 15%;
+  margin-top: 15%;
   border-radius: 5px;
   background-color: #1f2d41;
   // text-align: center;
+  box-shadow: 0 4px 10px -2px #000000; 
 
   .form-header{
     font-family: "Metropolis Bold";
