--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,35 +7,14 @@
       <!-- <span class="navbar-toggler-icon"></span> -->
     <!-- </button> -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <!-- 
-        <li class="nav-item active">
-          <%= link_to 'Home',root_path, data: {turbolinks: false} %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Food', root_path %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Entertainment', root_path %>
-        </li>
-        <li class = "nav-item">
-            <%= link_to 'Support', root_path %>
-        </li>
-        <li class = "nav-item">
-            <%= link_to 'Contact', root_path %>
-        </li> 
-        -->
-      </ul>
-      <form class="form-inline mt-2 mt-md-0" >
-        <!--
-        Incase I need it for future use.
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
         <% if user_signed_in? %>
             <%= link_to "Sign Out", destroy_user_session_path, :method => :delete,data: {turbolinks: false},class:'btn btn-outline-success m-5 my-sm-0 round-btn', style: "float:right; margin: 5px !important;" %>
         <% else %>
-          <%= link_to "Login", new_user_session_path, :method => :get, data: {turbolinks: false}, class:'btn btn-outline-success m-5 my-sm-0 round-btn', style: "float:right; margin: 5px !important;" %>
-        <%end%>
-      </form>
+          <li class = "nav-item">
+            <%= link_to "Login", new_user_session_path, :method => :get, data: {turbolinks: false}, style: "float:right;" %>
+          </li>
+        <% end %>
+      
     </div>
   </nav>
 </header>
