--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,19 @@
     <% render 'shared/alerts' %>
 
     <main role="main">
-      <%= yield %>
+      
 
+      <% if user_signed_in? %>
+        <div class = "wrapper">
+          <%= render 'shared/sidenavbar' %>
+          <%= yield %>
+        </div>
+      <% else %>
+        <%= yield %>
+      <% end %>
     </main>
-      <%= render "shared/footer" %>
+
+    <%= render "shared/footer" %>
 
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
