--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -2,7 +2,8 @@
 <nav id="sidebar">
     <div class="sidebar-header">
         <div class = 'profile-userpic'>
-            
+            <div data-aos = 'fade-in' style = "background-image: url('assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg');">
+            </div>
             <p style = "font-family: Metropolis Regular !important;">Dummy Name</p>   
         </div>
     </div>
