--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -9,31 +9,31 @@
     <ul class="list-unstyled components" style = "text-align: center !important;">
 
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;' do %>
+            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
                 <%= fa_icon('shopping-cart 2x')%>
                 <b>Food</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;' do %>
+            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
                 <%= fa_icon('child 2x')%>
                 <b>Entertainment</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;' do %>
+            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
                 <%= fa_icon('plus-square 2x')%>
                 <b>Support</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #233d63;' do %>
+            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #233d63;', data: {turbolinks: false} do %>
                 <%= fa_icon('comment 2x')%>
                 <b>Lobby Chat</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;' do %>
+            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
                 <%= fa_icon('phone 2x')%>
                 <b>Contact Us</b>
             <% end %>
